--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
     <title>Sorting Algorithm Visualizer | Subinay Panda</title>
 </head>
 <body>
-    <h1 class="heading">Sorting Algorithm Visulaizer</h1>
+    <div class="container">
+        <h1 class="heading">Sorting Algorithm Visulaizer</h1>
+        <div class="player">
+            <div class="menu">
+                Bubble Sort
+                Selection Sort
+                Insertion Sort 
+    
+            </div>
+        </div>
+    </div>
     
     <script src="script.js"></script>
 </body>
