--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.6.0/remixicon.min.css" integrity="sha512-pI8MMQ9fC050RkbUOr8cJ75T5bYJpT1PAiML/7QZM6Fr74Ef6csO2/Cl92q+Qpxidm7WonXr6f+DbyxNHPGH8g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles.css">
     <title>Sorting Algorithm Visualizer | Subinay Panda</title>
 </head>
@@ -14,10 +15,18 @@
         <h1 class="heading">Sorting Algorithm Visulaizer</h1>
         <div class="player">
             <div class="menu">
-                Bubble Sort
-                Selection Sort
-                Insertion Sort 
-    
+                <ul>
+                    <li>Bubble Sort</li>
+                    <li>Selection Sort</li>
+                    <li>Insertion Sort</li>
+                    <li>Merge Sort</li>
+                    <li>Quick Sort</li>
+                    <li>Heap Sort</li>
+                    <li>Radix Sort</li>
+                    <li>Shell Sort</li>
+                </ul>
+                <div class="next"><i class="ri-arrow-right-s-line"></i></div>
+                <div class="prev"><i class="ri-arrow-left-s-line"></i></div>
             </div>
         </div>
     </div>
