--- a/animation.html
+++ b/animation.html
@@ -73,7 +73,7 @@
             <div></div>
             <div></div>
         </div> 
-        <div>by Subinay Panda</div>
+        <div>by <a href="https://github.com/subinay108/">Subinay Panda</a></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/CustomEase.min.js"></script> -->
