Mobile Responsive is done

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
                     </div>
                 </div>
                 <div class="array-size">
-                    Array Size: <span class="array-size-output">10</span>
+                    <span class="array-size-label">Array Size: </span><span class="array-size-output">10</span>
                     <input type="range" min="10" max="50" value="10" step="5" class="array-size-slider" id="myRange" oninput="displayArrSize(this)">
+                </div>
+                <div class="array-size-mobile">
+                    <i class="ri-bar-chart-fill"></i>
                 </div>
                 <div class="duration"></div>
             </div>    
