Label for is updated

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <label for="array-size-select">
                         <i class="ri-bar-chart-fill"></i>
                     </label>
-                    <select class="array-size-select" name="array-size" oninput="displayArrSize(this)">
+                    <select class="array-size-select" id="array-size-select" name="array-size" oninput="displayArrSize(this)">
                         <option>10</option>
                         <option>15</option>
                         <option>20</option>
